--- a/app/src/main/res/layout/current_weather_view.xml
+++ b/app/src/main/res/layout/current_weather_view.xml
@@ -36,12 +36,13 @@
     <TextView
         android:id="@+id/descriptionView"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/weatherIcon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="14sp"
+        android:textAlignment="center"
         tools:text="облачно с прояснениями" />
 
     <TextView
