--- a/app/src/main/res/layout/weather_forecast_view.xml
+++ b/app/src/main/res/layout/weather_forecast_view.xml
@@ -74,11 +74,12 @@
     <TextView
         android:id="@+id/descriptionView"
         style="@style/Text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/weatherIcon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="center"
         android:textSize="14sp"
         tools:text="облачно с прояснениями" />
 
