--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -151,7 +151,7 @@
             android:text="@string/backup" />
 
         <TextView
-            android:id="@+id/saveDataLink"
+            android:id="@+id/exportDataLink"
             style="@style/Text.Link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -159,7 +159,18 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:text="@string/save_application_data" />
+            android:text="@string/export_data" />
+
+        <TextView
+            android:id="@+id/importDataLink"
+            style="@style/Text.Link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/exportDataLink"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:text="@string/export_data" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
