Settings screen: improved writing test data to backup file

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -170,7 +170,18 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:text="@string/export_data" />
+            android:text="@string/import_data" />
+
+        <ProgressBar
+            android:id="@+id/backupProgressView"
+            style="@style/ProgressBar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="center_horizontal"
+            android:indeterminateTint="@color/app_green"
+            app:booleanVisibility="@{viewModel.isBackupProgressVisible()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
